# sdl-test

./: .editorconfig  README.md  meson.build
assets/: dot.png~  lazy.map
src/: Bg.cpp  Bg.h  BitmapFont.cpp  BitmapFont.h  BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  Camera.cpp  Camera.h  CircleCollider.cpp  CircleCollider.h  DataStream.cpp  DataStream.h  Dimension.h  Dot.cpp  Dot.h  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  Particle.cpp  Particle.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  Window.cpp  Window.h  main.cpp  main_audiorec.cpp  main_filerw.cpp  main_multidisplay.cpp  main_multiwindow.cpp  main_mutex.cpp  main_opengl.cpp  (+9 more)
